* include/ruby/defines.h (GCC_VERSION_SINCE): Fix logic error by   adding parentheses. Fix failures of TestMkmf::TestConvertible   with GCC 3.4.3 on Solaris 10. [Bug #12479] [ruby-dev:49660]

git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@55371 b2dd03c8-39d4-4d8f-98ff-823fe69b080e